# Schwab-API-Python

./: .env  .gitignore  LICENSE.txt  README.md  TDapiStreamingFields.csv  main.py  pyproject.toml  setup.py
.github/: FUNDING.yml
apis/: ALL.py  accountsAndTrading.py  authentication.py  client.py  instruments.py  marketHours.py  movers.py  optionChains.py  priceHistory.py  quotes.py  transactionHistory.py  userInfoAndPreferences.py  utilities.py  watchlist.py
docs/: api.md  client.md  orders.md  stream.md  stream_fields.py
examples/: .env  api_demo.py  jupyter_demo.ipynb  playground.py  processing_streaming_data.py  stream_demo.py
modules/: api.py  database.py  globals.py  help.py  order.py  stream.py  terminal.py  tokens.txt  universe.py  user.py  utilities.py
schwabdev/: __init__.py  api.py  client.py  color_print.py  enums.py  stream.py  terminal.py  tokens.py
scripts/: apply_formatting
stream/: admin.py  levelOne.py  stream.py
streaming/: account.py  actives.py  admin.py  book.py  chart.py  levelOne.py  levelTwo.py  news.py  timeSale.py  utilities.py
tests/: api_demo.py  playground.py  stream_demo.py
utilities/: client.py  stream.py  tools.py
variables/: credentials.py  globals.py  tokens.txt
